syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "Ism.PgsTimeout.Common.Core";

package pgsTimeout;

service PgsTimeout{
	rpc SetPgsTimeoutMode (SetPgsTimeoutModeRequest) returns (google.protobuf.Empty);
    rpc GetPgsTimeoutMode (google.protobuf.Empty) returns (GetPgsTimeoutModeResponse);

    // PGS methods
    rpc GetPgsVideoFileList (google.protobuf.Empty) returns (GetPgsVideoListResponse);
    rpc SetPgsVideoFile (SetPgsVideoFileRequest) returns (google.protobuf.Empty);
    rpc GetPgsVideoFile (google.protobuf.Empty) returns (GetPgsVideoFileResponse);
    rpc SetCurrentVideoToRandomTime (google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc GetPgsAlwaysOnSetting (google.protobuf.Empty) returns (GetPgsAlwaysOnSettingResponse);

    // Timeout methods
    rpc GetTimeoutPdfPath (google.protobuf.Empty) returns (GetTimeoutPdfPathResponse);
    rpc GetTimeoutPageCount (google.protobuf.Empty) returns (GetTimeoutPageCountResponse);
    rpc GetTimeoutPage (google.protobuf.Empty) returns (GetTimeoutPageResponse);
    rpc SetTimeoutPage (SetTimeoutPageRequest) returns (google.protobuf.Empty);
    rpc NextPage (google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc PreviousPage (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetPgsAlwaysOnSettingResponse {
    bool IsAlwaysOn = 1;
}

message SetPgsTimeoutModeRequest{
    PgsTimeoutModeEnum Mode = 1;
}

message GetPgsTimeoutModeResponse{
    PgsTimeoutModeEnum Mode = 1;
}

message GetPgsVideoListResponse{
    repeated string VideoFiles = 1;
}

message GetPgsVideoFileResponse{
    string VideoFile = 1;
}

message SetPgsVideoFileRequest{
    string VideoFile = 1;
}

message GetTimeoutPdfPathResponse{
    string PdfPath = 1;
}

message GetTimeoutPageCountResponse{
    int32 PageCount = 1;
}

message SetTimeoutPageRequest{
    int32 PageNumber = 1;
}

message GetTimeoutPageResponse{
    int32 PageNumber = 1;
}

enum PgsTimeoutModeEnum{
    PGS_TIMEOUT_MODE_IDLE = 0;
    PGS_TIMEOUT_MODE_PGS = 1;
    PGS_TIMEOUT_MODE_TIMEOUT = 2;
}